# engram

./: .engram  .env.example  .env.test  .gitignore  .mcp.json  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  engram  engram.yaml  engram.yaml.example  install-client.ps1  install-client.sh  install-server.sh  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-tests.yml  release.yml
agents/builtin/: code-reviewer.yaml  critic.yaml  data-analyst.yaml  doc-writer.yaml  planner.yaml  refactor.yaml  researcher.yaml  summarizer.yaml  synthesizer.yaml  test-writer.yaml
docker/: Dockerfile  entrypoint.sh
docs/: claude-code-setup.md  compare.html  enterprise-ai-engineering.md  enterprise-team-setup.md  governance.html  index.html  quickstart.md  remote-deployment.md  use-cases.html
docs/guides/: agents.md  claude-code-setup.md  enterprise-ai-engineering.md  enterprise-team-setup.md  gateway.md  obsidian-migration.md  quickstart.md  remote-deployment.md
hooks/bash/: engram-git-write.sh  engram-heartbeat.py  engram-inject.sh  engram-precompact.sh  engram-session-write.sh
hooks/windows/: README.md  engram-git-write.ps1  engram-heartbeat.py  engram-inject.ps1  engram-precompact.ps1  engram-session-write.ps1  post-commit.ps1
skills/: __init__.py  decorator.py  loader.py
skills/builtin/: __init__.py  graph.py  memory.py  web.py
tests/install/: run.sh
tests/install/e2e/: README.md  test_real_auth_enforcement.sh  test_real_install_health.sh  test_real_mcp_sse.sh  test_real_memory_roundtrip.sh  test_real_persistence.sh
tests/install/integration/: test_client_claudemd.sh  test_client_mcp_registration.sh  test_deploy_mode_open_mode.sh  test_fresh_install.sh  test_fresh_vs_upgrade_data_handling.sh  test_installed_hooks_auth.sh  test_pre_v14_migration.sh  test_qdrant_optin.sh  test_stale_yaml_recovery.sh  test_stdin_pipe_install.sh  test_upgrade_modes.sh  test_version_pinning.sh
tests/install/lib/: assert.sh  docker_test.sh  e2e_helpers.sh  fixtures.sh  setup-container.sh
tests/install/unit/: test_banner_alignment.sh  test_compose_config.sh  test_engram_yaml_example.sh  test_help_flags.sh  test_namespace_alignment.sh  test_no_x_api_key.sh  test_python_syntax.sh  test_shell_syntax.sh
tools/: backup.sh  build_cms57f_kg.py  conftest.py  migrate_affects_edges.py  migrate_obsidian.py  migrate_to_qdrant.py  reembed.py  smoke_test.py  test_agent_communication.py  test_agents_api.py  test_ai_governance.py  test_api_features.py  test_api_integration.py  test_arcadedb.py  test_community_detection.py  test_contradiction_direction.py  test_corpus.py  test_decay.py  test_decision_coverage.py  test_engram.py  test_epoch_ms_temporal.py  test_fanout.py  test_graph_api.py  test_immediate_delivery.py  test_incident_hook.py  test_incident_retrieval.py  test_incident_webhook.py  test_kek_rotation.py  test_knowledge_health.py  test_learning.py  test_learning_admin.py  test_learning_full.py  test_llm_extraction.py  test_mcp_stdio.py  test_missing_coverage.py  test_orchestrator.py  test_provenance.py  test_qdrant_backend.py  test_skill_coach_v2.py  test_skill_packs.py  (+6 more)
tools/e2e/: conftest.py  test_e2e_core.py  test_e2e_features.py  test_e2e_temporal.py
